--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"server": "nodemon ./api/server.js"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
 		"body-parser": "^1.20.2",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -20,7 +21,9 @@
 		"multer": "^1.4.5-lts.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.22.3"
+		"react-hook-form": "^7.51.0",
+		"react-router-dom": "^6.22.3",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.56",
